Corrected left margin on mobile devices that was squishing content on ADPs.

--- a/style/_quizAdpLayout.scss
+++ b/style/_quizAdpLayout.scss
@@ -19,7 +19,7 @@
 	}
 	.article-detail-container {
 		max-width: 100% !important; /* override styling conflict. remove for 2.0. */
-		margin-left: 0;
+		margin-left: 0 !important;
 	}
 }
 @media (max-width: 600px){
